--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* font-family: 'Roboto', sans-serif; */
 :root {
   --main-color-website: #ffffff;
   --primary-bgr-color: #f1f1f2;
@@ -13,12 +12,17 @@ body {
   color: var(--main-color);
 
   font-family: "Georama", sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
 }
 .list {
   list-style: none;
 }
 .link {
   text-decoration: none;
+}
+.secondary-title {
+  font-size: 32px;
 }
 
 /* Header */
@@ -28,6 +32,7 @@ body {
 .nav-link {
   color: var(--main-color);
 
+  font-family: "Georama", sans-serif;
   font-size: 18px;
   line-height: 1.2;
 }
@@ -73,3 +78,118 @@ body {
 }
 
 /* Feature Split */
+.feature-split {
+  background-color: var(--primary-bgr-color);
+}
+.feature-text {
+  font-size: 20px;
+}
+
+/* Posts */
+.posts-text {
+  font-size: 18px;
+  line-height: 1.3;
+}
+.posts-item {
+  background-color: var(--hed-color);
+}
+.posts-item:hover,
+.posts-item:focus {
+  background-color: var(--main-color-website);
+}
+.posts-title {
+  font-size: 20px;
+  line-height: 1.2;
+}
+.more-text {
+  color: var(--main-color);
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+/* CTA */
+.section-cta {
+  background-color: var(--secondary-bgr-color);
+}
+.secondary-title.cta-title {
+  display: none;
+}
+.ready-text,
+.sing-text {
+  color: var(--main-color);
+
+  font-size: 32px;
+}
+.button {
+  color: var(--secondary-bgr-color);
+  background-color: var(--primary-bgr-color);
+
+  font-family: "Georama", sans-serif;
+  font-size: 18px;
+  line-height: 1.3;
+  text-transform: uppercase;
+
+  border: 1px solid var(--main-color);
+  border-radius: 5px;
+}
+.button.primary {
+  background-color: var(--main-color);
+  color: var(--main-color-website);
+}
+.button.secondary {
+  background-color: var(--secondary-bgr-color);
+  color: var(--main-color);
+}
+
+/* Posts blog */
+.blog-fiature {
+  background-color: var(--auxiliary-bgr-color);
+}
+.blog-text {
+  font-size: 18px;
+  line-height: 1.3;
+}
+.author {
+  color: var(--main-color-website);
+}
+.title-blog-one {
+  color: var(--main-color-website);
+
+  font-size: 48px;
+  line-height: 1.2;
+}
+.link-blog-one {
+  color: var(--main-color-website);
+
+  font-family: "Georama", sans-serif;
+  font-size: 18px;
+  line-height: 1.4;
+}
+.title-card {
+  font-size: 24px;
+}
+.card-blog-text {
+  font-size: 18px;
+}
+.link-blog-card {
+  color: var(--main-color);
+
+  font-family: "Georama", sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+/* Footer */
+.list-left,
+.list-right {
+  color: var(--main-color);
+}
+
+.copir-link {
+  color: var(--main-color);
+
+  font-family: "Georama", sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+}
